tests/checker/diagnostics/0221_adt_constructor_int_arg_mismatch_09.ml.infer.expected
File "0221_adt_constructor_int_arg_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0221_adt_constructor_int_arg_mismatch_09 is not a valid module name.

File "0221_adt_constructor_int_arg_mismatch_09.ml", line 2, characters 10-14:
2 | let _ = A true
              ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
