tests/checker/diagnostics/0221_adt_constructor_int_arg_mismatch_09.ml
type rec_iota = A of int | C of bool
let _ = A true
